--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -33,3 +33,8 @@ $createProjectSidebarWidth: 500px;
 // Forms
 //=======
 $inputMarginBottom: 10px;
+
+//======
+// Text
+//======
+$commonLineHeight: 20px;
