--- a/client/src/SCSS/account/accountModals.scss
+++ b/client/src/SCSS/account/accountModals.scss
@@ -63,6 +63,7 @@
 		margin-top: 5px;
 		margin-bottom: $inputMarginBottom;
 		outline: none;
+		border: 1px solid gray;
 		box-sizing: border-box;
 		background: $lightGray;
 		padding: 8px;
