--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -29,6 +29,12 @@ $navBarHeight: 60px;
 $editAccountModalWidth:  540px;
 $createProjectSidebarWidth: 500px;
 
+//===========
+// Components
+//===========
+$viewProjectModalMargin: 20px;
+$viewProjectModalBorderWidth: 5px;
+
 //=======
 // Forms
 //=======
