--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -4,43 +4,40 @@
 // Basic
 $black: #000000;
 // Grays
-$veryLightGray: #f3f2f1;
-$lightGray: #e5e5e5;
-$mediumLightGray: #bfbfbf;
-$mediumGray: #919191;
+$very-light-gray: #f3f2f1;
+$light-gray: #e5e5e5;
+$medium-light-gray: #bfbfbf;
+$medium-gray: #919191;
 // Blue grays
-$lightBlueGray: #607c99;
-$blueGray: #50677f;
+$light-blue-gray: #607c99;
+$blue-gray: #50677f;
 // Blue teals
-$lightBlueTeal: #8ba8b3;
-$darkBlueTeal: #50798b;
-
-$darkBlueFromBackgroundImage: #305469;
-$lightBlueFromBackgroundImage: #a9bdc4;
+$light-blue-teal: #8ba8b3;
+$dark-blue-teal: #50798b;
 
 //==========
 // Heights
 //==========
-$navBarHeight: 60px;
+$navbar-height: 60px;
 
 //=========
 // Widths
 //=========
-$editAccountModalWidth:  540px;
-$createProjectSidebarWidth: 500px;
+$edit-account-modal-width:  540px;
+$create-project-bug-sidebar-width: 500px;
 
 //===========
 // Components
 //===========
-$viewProjectModalMargin: 20px;
-$viewProjectModalBorderWidth: 5px;
+$view-project-bug-modal-margin: 20px;
+$view-project-bug-modal-border-width: 5px;
 
 //=======
 // Forms
 //=======
-$inputMarginBottom: 10px;
+$form-input-margin-bottom: 10px;
 
 //======
 // Text
 //======
-$commonLineHeight: 20px;
+$common-line-height: 20px;
