--- a/client/src/SCSS/app.scss
+++ b/client/src/SCSS/app.scss
@@ -1,4 +1,9 @@
 html, body {
     width: 100%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
+
+// Used to disable scrolling using JS
+.stop-scrolling {
+	overflow-y: hidden;
+  }
