--- a/client/src/SCSS/utils/_mixins.scss
+++ b/client/src/SCSS/utils/_mixins.scss
@@ -5,7 +5,7 @@
 	top: 12px;
 	border: none;
 	background: none;
-	color: $mediumGray;
+	color: $medium-gray;
 	font-size: 22px;
 	cursor: pointer;
 }
