ViewProjectModal now adjusts to fit the size of the screen

--- a/client/src/SCSS/projects/view-edit-delete/viewProjectModal.scss
+++ b/client/src/SCSS/projects/view-edit-delete/viewProjectModal.scss
@@ -3,7 +3,7 @@
 
 .view-project-modal-component {
 	.blurred-background {
-		position: absolute;
+		position: fixed;
 		top: $navbar-height;
 		background-color: black;
 		opacity: 0.5;
