--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -8,6 +8,7 @@ $very-light-gray: #f3f2f1;
 $light-gray: #e5e5e5;
 $medium-light-gray: #bfbfbf;
 $medium-gray: #919191;
+$dark-gray: #757575;
 // Blue grays
 $light-blue-gray: #607c99;
 $blue-gray: #50677f;
