--- a/client/src/SCSS/projects/view-edit-delete/editProjectInfo.scss
+++ b/client/src/SCSS/projects/view-edit-delete/editProjectInfo.scss
@@ -10,9 +10,8 @@
 		text-align: center;
 	}
 
-	.top-form-errors-container {
-		margin: 20px 0px 25px 0px;
-		height: 5px;
+	.form-errors--test{
+		margin-top: 13px;
 	}
 
 	.bottom-form-errors-container {
@@ -27,9 +26,10 @@
 	}
 
 	.centering-container__form-name-input {
+		margin-top: 20px;
 		border: 2px solid black;
 		background-color: white;
-		padding: 4px;
+		padding: 4px 16px 4px 16px;
 		height: 43px;
 		width: 500px;
 		font-family: Arial, Helvetica, sans-serif;
