--- a/client/src/SCSS/projects/view-edit-delete/viewProjectModal.scss
+++ b/client/src/SCSS/projects/view-edit-delete/viewProjectModal.scss
@@ -21,8 +21,6 @@
 		// ...to make modal resize (using js) look less jumpy
 		height: 88.5vh;
 		width: 97vw;
-		// On resize, keeps right most project box margin from being intruded upon
-		min-width: 890px;
 		font-family: Arial, Helvetica, sans-serif;
 	}
 
@@ -126,9 +124,12 @@
 		width: 100%;
 	}
 
-	.display-edit-project-table__data {
+	.display-edit-project-table__data--one-half {
+		width: 50%;
+	}
+
+	.display-edit-project-table__data--one-third {
 		width: 33.33%;
-		min-width: 270px;
 	}
 
 	.project-box {
@@ -136,7 +137,6 @@
 		border: 2px solid black;
 		background-color: $light-gray;
 		padding: 0px 20px 20px 20px;
-		min-height: 400px;
 		overflow-wrap: anywhere;
 	}
 
